Fix typo in script type attribute

--- a/index.html
+++ b/index.html
@@ -76,5 +76,6 @@
 </head>
   <body class="bg-slate-50 text-slate-900 selection:bg-brand-100 selection:text-brand-600">
     <div id="root"></div>
+    <script type="moudle" src="/index.tsx"></script>
   </body>
 </html>
